--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@thirdweb-dev/react": "^2",
-    "@thirdweb-dev/sdk": "^2",
-    "ethers": "^5.6.1",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@thirdweb-dev/react": "^2.0.4",
+    "@thirdweb-dev/sdk": "^2.0.30",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.3",
+    "framer-motion": "^6.2.10",
+    "fs": "^0.0.1-security",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
