--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^6.2.10",
     "fs": "^0.0.1-security",
     "next": "12.1.0",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
