fix(get-nfts): reasd from file correctly

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "api/get-nfts.ts": {
+      "pages/api/get-nfts.ts": {
         "includeFiles": "data/**"
       }
     }
